# ChangeLog for net-im/kadu-arts_sound
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-arts_sound-0.6.0.2.ebuild, +kadu-arts_sound-0.6.0.3.ebuild:
  Bumped. Removed previous version.

  07 Aug 2008; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-arts_sound-0.6.0.1.ebuild:
  Removed cruft.

  03 Jul 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-arts_sound-0.6.0.2.ebuild:
  Bumped.

  20 May 2008; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-arts_sound-0.6.0-r1.ebuild:
  Removed cruft.

  05 May 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-arts_sound-0.6.0.1.ebuild:
  Bumped.

  15 Mar 2008; Michał Ziąbkowski <mziab@o2.pl>
  -kadu-arts_sound-0.6.0.ebuild, +kadu-arts_sound-0.6.0-r1.ebuild:
  Synced with OBenY's version
