@@ -1,3 +1,4 @@
 DIST kadu-0.6.0.3.tar.bz2 1609595 RMD160 7a8e27a352dc6d40ff8305e130eacafec7ee4831 SHA1 9e56402d272e09bda32f46f1b963acb1d76c9eb6 SHA256 36e7d276403c47ee5da120d92a7d1cb8c5676ad079b4e7d3f168b9e7d083b167
-EBUILD kadu-arts_sound-0.6.0.3.ebuild 916 RMD160 d6e27b14ff24723636b2ff189df3e9c78445864d SHA1 73808df1c9d48b8e84939c295b13c0db108883dc SHA256 e9e5c2d4a59db751fb6ec647dab1964f4ca84d45da3a54b037fa9e6f0e666f18
-MISC ChangeLog 819 RMD160 b58281ad638cd4f229f6acac5275f2a7e326d579 SHA1 f0a6460daa5f7b2d1385493d50f196cd35ef234e SHA256 f78223e021e7e7696470047de5691281ee9d0ae8dfa1b7cff33534180a972157
+EBUILD kadu-arts_sound-0.6.0.3.ebuild 1046 RMD160 65c3ad01af2538b6587fdc494405836ceeef96a4 SHA1 e370effd271bf76d162f475b91fef7a84eaa4189 SHA256 50309d3775295e9458a721aa0fc46f50690e0c281e5c9de27eb3abe6c58c91e1
+MISC ChangeLog 940 RMD160 ad74d1f9764a058cb4fe04321cb3c66ce9e71642 SHA1 80f64f19f68694317f0a7dee80a81a5ddb1d4506 SHA256 5d9f22cf8e63c9d84c86e0898fd3fc815ee87073ab959e71af4a21f899df50c5
+MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
