@@ -1,6 +1,10 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
 inherit kadu
 
-MOD_DEPEND="kde-base/arts ~net-im/kadu-sound-${MIN_REQ}"
+MOD_DEPEND="kde-base/arts >=net-im/kadu-sound-${MIN_REQ}"
 
 inherit kadu-module kadu-module-func
 
@@ -8,6 +12,7 @@ SRC_URI="http://www.kadu.net/download/stable/kadu-${K_PV}.tar.bz2"
 DESCRIPTION="Kadu module that play sounds using ARTS"
 HOMEPAGE="http://kadu.net"
 KEYWORDS="amd64 x86"
+IUSE=""
 
 src_unpack()
 {
