@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
+  kadu-arts_sound-0.6.0.3.ebuild, +metadata.xml:
+  Some repoman fixes.
+
   01 Jan 2009; Michał Ziąbkowski <mziab@o2.pl>
   -kadu-arts_sound-0.6.0.2.ebuild, +kadu-arts_sound-0.6.0.3.ebuild:
   Bumped. Removed previous version.
